k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seoul-apt-price-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: seoul-apt.bit-habit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seoul-apt-price
                port:
                  number: 80
  tls:
    - hosts:
        - seoul-apt.bit-habit.com
      secretName: tls-secret
